--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,7 +23,13 @@
             android:layout_weight="1"
             android:text="入力"/>
 
+        <View
+            android:background="#000000"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"/>
+
         <EditText
+            android:textColor="#000000"
             android:id="@+id/sentence"
             android:layout_weight="9"
             android:layout_width="match_parent"
@@ -32,6 +38,7 @@
     </LinearLayout>
 
     <Button
+        android:layout_gravity="right"
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -57,6 +64,7 @@
             android:layout_height="2dp"/>
 
         <TextView
+            android:textColor="#000000"
             android:id="@+id/result"
             android:layout_weight="9"
             android:layout_width="match_parent"
